using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace CloudDrive.App.Services
{
    public interface IFileSystemWatcher
    {
        void Start();
        void Stop();
    }
}
